2009-02-01  Vladimir Tzankov  <vtzankov@gmail.com>

	* makemake.in (LINKKIT): add xthread.c in threads builds

2009-02-01  Vladimir Tzankov  <vtzankov@gmail.com>
	* unix.d (SETSID): use setsid() if available (do not emulate it via
	setpgid()). fixes MT builds on some linux distributions.

2009-01-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (signal_handler_thread): handle ualarm() failures when run in
	virtual machines (timer resolution is too low)

2009-01-29  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_memfile.d (find_memdump): ignore _per_thread_symvalues in the
	saved header when checking image compatibility. they do not survive
	image save/load

2009-01-28  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (SYMBOL_TLS_INDEX_NONE): cast to aint, not uintL

2009-01-28  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (struct symbol_): make its size always be multiple
	of varobject_alignment. fixes 64 bit threads (MT) build

2009-01-21  Sam Steingold  <sds@gnu.org>

	* lisparit.d (FLOAT-SCALE-EXPONENT): restore the mantissa
	precision before comparing it to 1

2009-01-19  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (error_c_integer): export to clisp.h to support
	error_sint et al
	* foreign1.lisp (convert-from-foreign): fix C-POINTER handling
	this fixes the 2008-12-19 patch

2009-01-18  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-float-for-e): before increasing mantwidth,
	make sure it is not NIL

2009-01-18  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (quit_instantly): make it nonreturning_function

2009-01-18  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1007358 ]: LOG of large integers is broken
	* realtran.d (extend2_digits, I_ln_F, RA_ln_F, F_extend_lnx1_F)
	(RA_ln1_F): add
	(R_ln1_R): use RA_ln1_F and F_extend_lnx1_F
	(R_ln_R): use RA_ln_F

2009-01-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* win32aux.d [WIN32_THREADS]: #ifdef the globals not used in MT builds
	(aux_event): define it to NULL in MT builds (can be done in single